Update: Link zur Doku in Diagnose-GUI eingefügt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body class="p-4">
   <div class="container">
     <h1 class="mb-4">🚀 M24 ABD-Tool Diagnose GUI (Pro)</h1>
+    <a href="doku.html" class="btn btn-outline-secondary mb-4">📑 Zur Dokumentation</a>
 
     <h2 class="mt-4">📊 Dashboard</h2>
     <div id="dashboard" class="bg-white border rounded p-3 mb-4">
